refactor: Update application branding and metadata
Updates application name, metadata, and branding elements to reflect the "NewsFlow Pro" identity. This includes changes to package.json, index.html meta tags, metadata.json, and constants.ts for template customization.

Additionally, this commit introduces:
- Hashtag generation service using Gemini.
- Enhanced logging in the social media dispatch service.
- Refinements to the CanvasPreview component for improved styling consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newsflow-saas---automated-social-media-publisher",
+  "name": "newsflow-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
